# clinical-decision-support

./: README.md
windsurf-project/: README.md  pyproject.toml  requirements.txt
windsurf-project/agentic/: __init__.py  agent.py  communication.py  message.py  system.py  task.py
windsurf-project/examples/: __init__.py  advanced_example.py  basic_example.py
windsurf-project/tests/: __init__.py  test_agent.py
